# cvsmith

./: .dockerignore  .gitignore  Dockerfile  README.md  Taskfile.yml  compose.yaml  pyproject.toml  railway.json
.github/workflows/: ci.yml  railway.yml
app/: main.py
src/app/: main.py  recommender.py
src/ui/: interface.py  ui.py
tests/: test_sample.py
ui/: interface.py
