[project]
name = "job-ai-poc"
version = "0.1.0"
description = "First POC project for job search using LLMs with deployment on Railway."
authors = [
    {name = "Dan"}
]
license = {text = "Apache2"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.115.13,<0.116.0)",
    "uvicorn[standard] (>=0.34.3,<0.35.0)",
    "go-task-bin (>=3.44.0,<4.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.0"
pytest = "^8.4.1"
pylint = "^3.3.7"
pylance = "^0.29.0"
httpx = "^0.28.1"

